<resources>
    <!-- activity_main.xml string values-->
    <string name="app_name">Chef\'s Kiss</string>
    <string name="app_icon_description">App Icon</string>

    <!-- Quick Links descriptions-->
    <string name="icon_breakfast_description">Breakfast Icon</string>
    <string name="icon_brunch_description">Brunch Icon</string>
    <string name="icon_lunch_description">Lunch Icon</string>
    <string name="icon_dinner_description">Dinner Icon</string>
    <string name="icon_dessert_description">Dessert Icon</string>
    <string name="icon_other_description">Other Icon</string>
    <string name="view_all_recipes_description">View All Recipes</string>
    <string name="add_recipe_description">Add Recipe</string>

    <!-- Quick Links button text -->
    <string name="button_breakfast">Breakfast</string>
    <string name="button_brunch">Brunch</string>
    <string name="button_lunch">Lunch</string>
    <string name="button_dinner">Dinner</string>
    <string name="button_dessert">Dessert</string>
    <string name="button_other">Other</string>
    <string name="button_all_recipes">All Recipes</string>
    <string name="button_add_recipe">+</string>

    <!-- Add Recipe screen strings -->
    <string name="add_recipe_title">Add Recipe</string>
    <string name="add_recipe_name_label">Recipe Name +</string>
    <string name="add_recipe_ingredients_label">Ingredients +</string>
    <string name="add_recipe_instructions_label">Instructions +</string>
    <string name="add_recipe_upload_image">Upload Image</string>

    <!-- Footer navigation strings -->
    <string name="back_button_text">Back</string>
    <string name="home_button_text">Home</string>
    <string name="save_button_text">Save</string>
    <string name="edit_button_text">Edit</string>
    <string name="delete_button_text">Delete</string>

    <!--Add Recipe descriptions-->
    <string name="add_recipe_icon_description">Add Recipe Icon</string>
    <string name="recipe_category_description">Select Recipe Category</string>

    <!-- Edit Recipe strings -->
    <string name="edit_recipe_title">Edit Recipe</string>
    <string name="edit_image_button_text">Edit Image</string>
    <string name="edit_recipe_name">Edit Name</string>
    <string name="edit_recipe_ingredients">Edit Ingredients</string>
    <string name="edit_recipe_instructions">Edit Instructions</string>
    <string name="edit_recipe_category">Edit Category</string>


    <!-- Edit Recipe description -->
    <string name="edit_recipe_icon_description">Edit Recipe Icon</string>
    <string name="edit_image_description">Edit Recipe Image</string>

    <!-- View Recipe strings -->
    <string name="selected_recipe_name_title">White Chocolate Brownies</string>
    <string name="selected_recipe_name">Recipe Name</string>
    <string name="selected_recipe_name_text">White Chocolate Brownies\n</string>
    <string name="selected_recipe_ingredients">Ingredients</string>
    <string name="selected_recipe_ingredients_text">500ml low fat milk\n3 eggs\nFlour\nSugar\nSalt\n"</string>
    <string name="selected_recipe_instructions">Instructions</string>
    <string name="selected_recipe_instructions_text">1)  Preheat oven to 350°F (175°C).\n2)
        Mix ingredients. \n3)  Bake for 30 minutes.\n"</string>
    <string name="selected_recipe_category">Category</string>
    <string name="selected_recipe_category_text">Dessert</string>

    <!-- View Recipe descriptions -->
    <string name="selected_recipe_icon_description">Selected Recipe Icon</string>
    <string name="selected_recipe_image">Selected Recipe Image</string>
    <string name="selected_recipe_image_description">Selected Recipe Image</string>


    <!-- View All Recipes strings -->
    <string name="view_all_recipes_title">All Recipes</string>

    <!-- View All Recipes descriptions -->
    <string name="view_all_recipes_icon_description">View All Recipes Icon</string>

    <!-- Item Recipe strings -->
    <string name="recipe_image_description">Recipe Image</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="view_button_text">View</string>


        <!-- ...Food categories for spinner... -->
        <string-array name="recipe_categories">
            <item>Breakfast</item>
            <item>Brunch</item>
            <item>Lunch</item>
            <item>Dinner</item>
            <item>Dessert</item>
            <item>Other</item>
        </string-array>

    <!-- Menu items -->
    <string name="action_settings">Settings</string>
    <string name="about">About</string>
    <string name="profile">Profile</string>
    <string name="toggletheme">Toggle Theme</string>
    <string name="helpandsupport">Help</string>
    <string name="logout">Logout</string>

    <!-- Settings Activity strings -->
    <string name="settings_title">Settings</string>
    <string name="settings_description">Manage your app settings here.</string>


</resources>