<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
    android:id="@+id/action_settings"
    android:title="@string/action_settings"
    android:orderInCategory="100"
    app:showAsAction="never" />
    <item
        android:id="@+id/about"
        android:title="@string/about"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/helpandsupport"
        android:title="@string/helpandsupport"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/toggletheme"
        android:title="@string/toggletheme"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>