<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background_light">

    <!-- Main Activity Layout
         This is the splash page which is essentially a home page.  It displays the name of the app
         ("Chef's Kiss") and has quick links which takes a user to various food categories
         (e.g. breakfast, lunch, dinner).  There is also a quick link to display all recipes and a
         quick 'add recipe' button which takes a user to the part of the application to add a
         recipe.-->

    <!-- App Icon and app name. -->
    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/app_icon_description"
        android:src="@drawable/chefskiss"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <LinearLayout
        android:id="@+id/app_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/app_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="6dp">

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="55sp"
            android:textStyle="bold"
            android:fontFamily="@font/baloo_2_extra_bold"
            android:textColor="@color/primary_text_light"
            />

        <ImageView
            android:id="@+id/kiss_icon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/kiss"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_name" />
    </LinearLayout>


<!-- Quick Links Grid to food categories. -->
    <GridLayout
        android:id="@+id/quick_links_grid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/app_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:rowCount="2"
        android:columnCount="3"
        android:alignmentMode="alignMargins"
        android:useDefaultMargins="true"
        android:layout_marginBottom="32dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/icon_breakfast"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/icon_breakfast"
                android:contentDescription="@string/icon_breakfast_description"/>

            <Button
                android:id="@+id/button_breakfast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_breakfast"
                android:textSize="12sp"
                android:backgroundTint="@color/button_background_light"
                android:textColor="@color/button_text_light"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/icon_lunch"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/icon_lunch"
                android:contentDescription="@string/icon_lunch_description" />

            <Button
                android:id="@+id/button_lunch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_lunch"
                android:textSize="12sp"
                android:backgroundTint="@color/button_background_light"
                android:textColor="@color/button_text_light"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/icon_dinner"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/icon_dinner"
                android:contentDescription="@string/icon_dinner_description" />

            <Button
                android:id="@+id/button_dinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_dinner"
                android:textSize="12sp"
                android:backgroundTint="@color/button_background_light"
                android:textColor="@color/button_text_light"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/icon_brunch"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/icon_brunch"
                android:contentDescription="@string/icon_brunch_description" />

            <Button
                android:id="@+id/button_brunch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_brunch"
                android:textSize="12sp"
                android:backgroundTint="@color/button_background_light"
                android:textColor="@color/button_text_light"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/icon_dessert"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/icon_dessert"
                android:contentDescription="@string/icon_dessert_description"
                />

            <Button
                android:id="@+id/button_dessert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_dessert"
                android:textSize="12sp"
                android:backgroundTint="@color/button_background_light"
                android:textColor="@color/button_text_light"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/icon_other"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/icon_other"
                android:contentDescription="@string/icon_other_description"/>

            <Button
                android:id="@+id/button_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_other"
                android:textSize="12sp"
                android:backgroundTint="@color/button_background_light"
                android:textColor="@color/button_text_light"
                android:textStyle="bold"/>
        </LinearLayout>

    </GridLayout>

    <!-- Quick Links to View All Recipes and Add Recipe -->
    <Button
        android:id="@+id/view_all_recipes_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/view_all_recipes_description"
        android:text="@string/button_all_recipes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/add_recipe_button"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/nav_button_background"
        android:textColor="@color/button_text_light"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/add_recipe_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/add_recipe_description"
        android:text="@string/button_add_recipe"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/action_button_background"
        android:textColor="@color/button_text_light"
        android:textStyle="bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>