<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_light">

    <!-- View Recipe page.
         This page displays the details of a recipe including its name, ingredients, instructions,
         and an image.  It also provides options to edit the recipe or navigate back to the main
         menu. -->

    <!-- Header for the recipe view.
         Displays the recipe name and an icon related to that food category. -->
    <LinearLayout
        android:id="@+id/recipe_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_vertical"
        android:layout_marginTop="16dp">

        <ImageView
            android:id="@+id/recipe_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/kiss"
            android:contentDescription="@string/selected_recipe_icon_description"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/recipe_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selected_recipe_name_title"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/primary_text_light"/>
    </LinearLayout>

    <!-- Section for displaying the recipe image.
         This section contains an ImageView to show the recipe image. -->
    <LinearLayout
        android:id="@+id/image_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/recipe_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/recipe_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:scaleType="centerCrop"
            android:src="@drawable/chefskiss"
            android:contentDescription="@string/selected_recipe_image"
            />
    </LinearLayout>

    <!-- Section for displaying recipe details.
         This section contains TextViews for the recipe name, ingredients, and instructions. -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/image_section"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="11dp">

        <TextView
            android:id="@+id/recipe_name_label"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/selected_recipe_name"
            android:textStyle="bold"
            android:textColor="@color/primary_text_light"/>

        <TextView
            android:id="@+id/recipe_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/selected_recipe_name_text"
            android:background="@color/details_background"
            android:textStyle="bold"
            android:textColor="@color/primary_text_light"
            />

        <TextView
            android:id="@+id/ingredients_label"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/selected_recipe_ingredients"
            android:textStyle="bold"
            android:textColor="@color/primary_text_light"/>

        <TextView
            android:id="@+id/recipe_ingredients"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/selected_recipe_ingredients_text"
            android:background="@color/details_background"
            android:textStyle="bold"
            android:textColor="@color/primary_text_light"
            />

        <TextView
            android:id="@+id/recipe_instructions_label"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/selected_recipe_instructions"
            android:textStyle="bold"
            android:textColor="@color/primary_text_light"/>

        <TextView
            android:id="@+id/recipe_instructions"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/selected_recipe_instructions_text"
            android:background="@color/details_background"
            android:textStyle="bold"
            android:textColor="@color/primary_text_light"/>
    </LinearLayout>

    <!-- Section for navigation buttons.
         This section contains buttons to navigate back, go home, or edit the recipe. -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp">

        <Button
            android:id="@+id/back_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back_button_text"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:backgroundTint="@color/nav_button_background"
            android:textColor="@color/button_text_light"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/home_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/home_button_text"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:backgroundTint="@color/nav_button_background"
            android:textColor="@color/button_text_light"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/edit_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/edit_button_text"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:backgroundTint="@color/action_button_background"
            android:textColor="@color/button_text_light"
            android:textStyle="bold"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>