<!-- This layout file defines the structure for a single recipe item in a list.
     It includes an image, title, and two buttons for viewing and editing the recipe.
     Each item shall be displayed in the Recycler View (activity_all_recipes.xml)-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="12dp"
    android:gravity="center_vertical">

    <!-- ImageView for the recipe item -->

    <ImageView
        android:id="@+id/recipe_item_image"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:src="@drawable/icon_dinner"
        android:contentDescription="@string/recipe_image_description"
        android:layout_marginEnd="16dp"/>

    <!-- LinearLayout for the name of the recipe and buttons to view or edit -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:id="@+id/recipe_item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recipe_title"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center_horizontal"
            android:layout_marginBottom="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/recipe_item_view_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/view_button_text"/>

            <Button
                android:id="@+id/recipe_item_edit_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/edit_button_text"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>