<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_light">

    <!--Add Recipe page.
     This page allows a user to select the category of food (i.e. breakfast/lunch etc),
     add a corresponding name (i.e. 'Muffins'), add ingredients and cooking instructions.
     A user may also add an image from their phone/camera.  -->

<!-- Header for Add Recipe
     Displays the page title (placeholder icon for food).  -->
    <LinearLayout
        android:id="@+id/add_recipe_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_vertical"
        android:layout_marginTop="16dp">

        <ImageView
            android:id="@+id/add_recipe_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/kiss"
            android:contentDescription="@string/add_recipe_icon_description"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/add_recipe_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_recipe_title"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/primary_text_light"/>
    </LinearLayout>

    <!-- Spinner/drop down menu for Recipe Category
    Contains the various options to be selected when adding a new recipe-->
    <Spinner
        android:id="@+id/recipe_category_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/add_recipe_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:background="@color/spinner_background"
        />

    <!-- LinearLayout for Recipe Details.
         Allows a user to add recipe name, ingredients, instructions and an image.-->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/recipe_category_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="11dp">

        <TextView
            android:id="@+id/recipe_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_recipe_name_label"
            android:textStyle="bold"
            android:textColor="@color/primary_text_light"
            />

        <EditText
            android:id="@+id/recipe_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/details_background"/>

        <TextView
            android:id="@+id/recipe_ingredients_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_recipe_ingredients_label"
            android:textStyle="bold"
            android:textColor="@color/primary_text_light"

           />

        <EditText
            android:id="@+id/recipe_ingredients_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:minLines="3"
            android:gravity="top"
            android:background="@color/details_background"
            />

        <TextView
            android:id="@+id/recipe_instructions_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_recipe_instructions_label"
            android:textStyle="bold"
            android:textColor="@color/primary_text_light"
            />

        <EditText
            android:id="@+id/recipe_instructions_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:minLines="3"
            android:gravity="top"
            android:background="@color/details_background"/>

        <Button
            android:id="@+id/upload_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_recipe_upload_image"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/recipe_instructions_input"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="@color/action_button_background"
            android:textColor="@color/button_text_light"/>

    </LinearLayout>

    <!-- Footer with navigation buttons.
         Contains buttons for Back, Home and Save.-->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp">

        <Button
            android:id="@+id/back_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back_button_text"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:backgroundTint="@color/nav_button_background"
            android:textColor="@color/button_text_light"/>

        <Button
            android:id="@+id/home_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/home_button_text"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:backgroundTint="@color/nav_button_background"
            android:textColor="@color/button_text_light"/>

        <Button
            android:id="@+id/save_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save_button_text"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:backgroundTint="@color/nav_button_background"
            android:textColor="@color/button_text_light"/>
    </LinearLayout>







</androidx.constraintlayout.widget.ConstraintLayout>